fixing overflow issue on phones

--- a/src/index.css
+++ b/src/index.css
@@ -453,12 +453,11 @@ iframe{
   }
  #main-panel{
    /* top: -100px; */
+   box-sizing: border-box;
    height: 120vh;
    flex-direction: column;
    align-items: center;
    justify-content: center;
-   padding-left: 3%;
-   padding-right: 3%;
  }
  #main-panel > *{
    margin: 0%;
